# mand-cfgd

./: .arcconfig  .gitignore  Makefile.am  NEWS.md  README.md  autogen.sh  configure.ac
m4/: ac_postgresql.m4
src/: Makefile.am  cfgd.c  cfgd.h  comm.c  comm.h
